<resources>
    <string name="app_name">PasswordManager</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password_length">Password must be at least 6 characters long</string>
    <string name="invalid_password_no_upper">Password must contain at least one Upper-case letter [A\-Z]</string>
    <string name="invalid_password_no_lower">Password must contain at least one lower-case letter [a\-z]</string>
    <string name="invalid_password_numeric">Password must contain at least one digit [0\-9]</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_do_not_match">Password don\'t match</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="exit">exit</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="backspace">backspace</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="to_log_in_or_register">to log in or register</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="hello_user">Hello, %d</string>
    <string name="proceed">Proceed</string>
    <string name="i_m_not_user">I\'m not %d</string>
    <string name="Code">Code</string>
    <string name="create_passcode">Create Passcode</string>
    <string name="confirm_passcode">Confirm Passcode</string>
    <string name="passcodes_dont_match">Passcodes do not match</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">Or</string>
    <string name="create_an_account">Create an Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="store_your_accounts_in_one_place">Store your accounts in one place</string>
    <string name="Forget_about_searching">Forget about searching for login data and your personal info</string>
    <string name="start_screen_image">start screen image</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="ok_hand">OK hand</string>
    <string name="handshake">Handshake</string>
    <string name="welcome_back">Welcome Back</string>
    <!--    menu    -->
    <string name="passwords">Passwords</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="personal_info">Personal Info</string>
    <string name="settings">Settings</string>
    <!--    menu    -->
    <string name="add_account">Add Account</string>
    <string name="add_card">Add Card</string>
    <string name="add_document">Add document</string>
    <string name="website_name">Website name</string>
    <string name="username">Username</string>
    <string name="website_icon">website icon</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="empty_field">Field cannot be empty</string>
    <string name="credentials_already_exist">Credentials already exist</string>
</resources>