<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.PasscodeFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617">

        <View
            android:id="@+id/circle1"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_view_grey_circle" />

        <View
            android:id="@+id/circle2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_view_grey_circle" />

        <View
            android:id="@+id/circle3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_view_grey_circle" />

        <View
            android:id="@+id/circle4"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_view_grey_circle" />
    </LinearLayout>


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:gravity="center">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:gravity="center">

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:gravity="center">

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:baselineAligned="true"
            android:gravity="center">

            <Button
                android:id="@+id/buttonExit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/exit" />

            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/buttonBackspace"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:background="#00FFFFFF"
                android:contentDescription="@string/backspace"
                android:cropToPadding="false"
                android:minHeight="48dp"
                android:scaleType="fitCenter"
                android:scaleX="0.6"
                android:scaleY="0.6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_fingerprint_24"/>

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>