<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".presentation.auth.StartPageFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start_screen_image"
        android:src="@drawable/start_screen_image"
        app:layout_constraintBottom_toTopOf="@+id/start_store_accounts_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_store_accounts_tv"
        style="@style/HeaderText"
        android:layout_width="242dp"
        android:layout_height="62dp"
        android:text="@string/store_your_accounts_in_one_place"
        app:layout_constraintBottom_toTopOf="@+id/start_forget_about_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/start_forget_about_tv"
        style="@style/HeaderText"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:text="@string/Forget_about_searching"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/start_register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_store_accounts_tv" />

    <Button
        android:id="@+id/start_register_btn"
        style="@style/WideButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/start_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_forget_about_tv"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/start_login_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/sign_in"
        android:textColor="@color/teal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_register_btn"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>