<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="clip_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/favicon"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/website_icon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/website_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/website_name"
                android:textColor="@color/black"
                android:fontFamily="@font/assistant_bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/website_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>